--- a/javascript-algos.html
+++ b/javascript-algos.html
@@ -2,6 +2,7 @@
 
 <head>
     <meta charset="utf-8">
+    <title>Xiaoxi Zhang's hw2</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
 </head>
@@ -17,6 +18,7 @@
     <script src="javascript-algos.js"></script>
 
     <div>
+        <i>Github repo: https://github.com/webericzhang/CSC436_hw2.git</i>
         <h3>Messages App :</h3>
         <hr>
         <button type="button" class="btn btn-primary" onclick="clearMessages()">
